@@ -12,6 +12,7 @@ v 1.4.0 (unreleased)
   - added FOSUserBundle view overrides
   - added command to list or mail registered users.
   - added command to send registration confirmation reminders.
+  - added fixture for testing unconfirmed users.
 
 v 1.3.0 (unreleased)
   - fixed an issue with executing migrations / fixtures even if none existed
